--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -84,7 +84,7 @@ jobs:
       - name: Test with pytest
         run: |
           . /docker-entrypoint.sh
-          coverage run -m pytest
+          coverage run -p -m pytest
 
       - name: Upload coverage data
         uses: actions/upload-artifact@v3
@@ -117,6 +117,7 @@ jobs:
       - name: Combine
         run: |
           coverage combine
+          python .github/update_cov_db_paths.py
           coverage json
           export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
