--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,11 @@ install_requires =
     tqdm
     xarray
     jetto-tools >= 1.8.8
+    # Work-around for docker image which runs python 3.9.7
+    # https://github.com/gitpython-developers/GitPython/issues/1332
+    streamlit == 1.11;python_full_version=='3.9.7'
+    streamlit >= 1.12;python_full_version!='3.9.7'
+    
 
 [options.extras_require]
 develop =
@@ -87,8 +92,7 @@ publishing =
     build
 imas =
     imas
-dash =
-    streamlit >= 1.12
+
 
 [options.packages.find]
 where = src
