--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ install_requires =
     # https://github.com/gitpython-developers/GitPython/issues/1332
     streamlit == 1.11;python_full_version=='3.9.7'
     streamlit >= 1.12;python_full_version!='3.9.7'
-    
+
 
 [options.extras_require]
 develop =
@@ -126,3 +126,6 @@ ignore_missing_imports = True
 [flake8]
 exclude = scripts
 max-line-length = 96
+
+[yapf]
+blank_line_before_nested_class_or_def = True
