--- a/tests/test_data/config_jetto.yaml
+++ b/tests/test_data/config_jetto.yaml
@@ -18,11 +18,15 @@ create:
     method: latin-hypercube
     n_samples: 3
   data:
-    user: public
     imasdb: aug
     run_in_start_at: 7000
     run_out_start_at: 8000
   template: ./template_model
+  template_data:
+    user: g2aho
+    db: aug
+    shot: 36982
+    run: 2
 extra_variables:
   - name: my_extra_var
     ids: core_profiles
