--- a/tests/test_data/config_jetto.yaml
+++ b/tests/test_data/config_jetto.yaml
@@ -23,6 +23,11 @@ create:
     run_in_start_at: 7000
     run_out_start_at: 8000
   template: ./template_model
+  template_data:
+    user: root
+    db: test
+    shot: 11111
+    run: 2222
 extra_variables:
   - name: my_extra_var
     ids: core_profiles
