and more testing

--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -45,6 +45,8 @@ jobs:
           mkdir -p ${HOME}/public/
           ln -s `pwd`/containerized_runs/imasdb /opt/imas/shared/
           ln -s `pwd`/containerized_runs/imasdb ${HOME}/public/imasdb
+          echo `pwd`/containerized_runs/imasdb
+          echo ${HOME}/public/imasdb
 
       - name: Python and Environment info
         run: |
