--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -61,6 +61,13 @@ jobs:
           path: .imasenv
           key: ${{ hashFiles('setup.cfg') }}
 
+      - name: Test paths
+        shell: python
+        run: |
+          from duqtools.api import ImasHandle
+          print(ImasHandle.from_string('root/test/11111/6666').path())
+          print(ImasHandle.from_string('test/11111/4444').path())
+
       - name: Create venv and setup duqtools
         run: |
           if ! test -d ".imasenv"; then
